--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,23 @@
+:root {
+  --clr-primary: #feca33;
+  --clr-secondary: #a50c0d;
+}
+
 *,
 *::before,
 *::after {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+}
+
+body {
+  font-family: "Open Sans", sans-serif;
+  line-height: 1.5;
+  font-size: 1.125rem;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.4)),
+    url("https://images.unsplash.com/photo-1600138336992-d9fcd4280aa5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80")
+      no-repeat center center/cover;
+  height: 100vh;
+  overflow: hidden;
 }
