--- a/css/style.css
+++ b/css/style.css
@@ -41,3 +41,16 @@ a {
 }
 
 /* Nav Section */
+.main-header .flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 1.5rem;
+  /* background: lightblue; */
+  overflow: hidden;
+  height: 70px;
+}
+
+.main-header .logo {
+  font-size: 2rem;
+}
