--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,14 @@ a {
   padding: 2rem 4rem;
 }
 
+.btn {
+  display: inline-block;
+  padding: 8px 16px;
+  background: var(--clr-primary);
+  color: var(--clr-secondary);
+  border-radius: 5px;
+}
+
 /* Nav Section */
 .main-header .flex {
   display: flex;
@@ -53,4 +61,18 @@ a {
 
 .main-header .logo {
   font-size: 2rem;
+}
+
+.main-header .main-nav {
+  display: flex;
+  align-items: center;
+}
+
+.main-header nav ul {
+  display: flex;
+  margin-right: 2rem;
+}
+
+.main-header nav ul li {
+  padding: 5px 10px;
 }
