--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,7 @@ a {
   background: var(--clr-primary);
   color: var(--clr-secondary);
   border-radius: 5px;
+  transition: all 0.3s ease;
 }
 
 /* Nav Section */
@@ -74,5 +75,19 @@ a {
 }
 
 .main-header nav ul li {
+  height: 100%;
   padding: 5px 10px;
+}
+
+.main-header nav ul li a {
+  padding-bottom: 5px;
+}
+
+.main-header nav ul li a:hover {
+  border-bottom: solid 1px var(--clr-primary);
+}
+
+.btn:hover {
+  background: var(--clr-secondary);
+  color: var(--clr-primary);
 }
